# allms

./: .gitignore  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md
.github/workflows/: ci.yaml
examples/: legacy_use_openai_completions.rs  use_anthropic_tools.rs  use_completions.rs  use_completions_vertex.rs  use_google_tools.rs  use_mistral_tools.rs  use_openai.rs  use_openai_assistant.rs  use_openai_assistant_azure.rs  use_openai_assistant_json.rs  use_openai_responses.rs  use_xai_tools.rs
examples/utils/: mod.rs  vertex.rs
src/: assistant.rs  completions.rs  constants.rs  domain.rs  enums.rs  lib.rs  mod.rs  models.rs  openai.rs  openai_legacy.rs  utils.rs
src/apis/: anthropic.rs  google.rs  mod.rs  openai.rs
src/assistants/: mod.rs
src/assistants/openai/: mod.rs  openai_api_version.rs  openai_assistant.rs  openai_file.rs  openai_vector_store.rs
src/deprecated/: mod.rs  openai_assistant_deprecated.rs  openai_completions_deprecated.rs
src/files/: anthropic.rs  llm_files.rs  mod.rs  openai.rs
src/legacy/: mod.rs  openai_assistant_legacy.rs  openai_completions_legacy.rs
src/llm_models/: anthropic.rs  aws.rs  deepseek.rs  google.rs  llm_model.rs  mistral.rs  mod.rs  open_ai.rs  openai.rs  perplexity.rs  tools.rs  xai.rs
