[package]
name = "aidapter"
version = "0.4.0"
edition = "2021"
authors = [
    "Kamil Litman <kamil@neferdata.com>",
    "Dario Lencina <dario@neferdata.com>",
]
keywords = ["openai", "mistral', "anthropic", "claude", "assistant", "typesafe"]
description = "One Library to rule them aLLMs"
license = "MIT"
repository = "git@github.com:neferdata/aidapter.git"
readme = "README.md"
categories = ["ai", "machine-learning", "openai", "api", "anthropic", "claude", "mistral", "assistant"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.60"
env_logger = "0.9.0"
log = "0.4.0"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
serde = "1.0.140"
serde_json = "1.0.82"
tiktoken-rs = "0.4.4"
schemars = "0.8.12"
reqwest = { version = "0.11.11", features = ["json", "multipart", "stream"]}
lazy_static = "1.4.0"
base64 = "0.13.0"
tokio = { version = "1.19.2", features = ["full"] }
async-trait = "0.1.66"
