[package]
name = "allms"
version = "0.14.0"
edition = "2021"
authors = [
    "Kamil Litman <kamil@neferdata.com>",
    "Dario Lencina <dario@armore.dev>",
    "Nate Dubetz <nate@neferdata.com>"
]
keywords = ["openai", "anthropic", "mistral", "gemini", "assistant"]
description = "One Library to rule them aLLMs"
license = "MIT"
repository = "https://github.com/neferdata/allms.git"
readme = "README.md"
categories = ["api-bindings", "development-tools", "parsing", "science", "text-processing"]
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.60"
aws-config = "1.5.4"
aws-sdk-bedrockruntime = "1.40.0"
env_logger = "0.9.0"
jsonschema = "=0.15.2"
log = "0.4.0"
r2d2 = "0.8.10"
r2d2_postgres = "0.18.1"
serde = "1.0.140"
serde_json = "1.0.82"
tiktoken-rs = "0.4.4"
schemars = "0.8.12"
reqwest = { version = "0.11.11", features = ["json", "multipart", "stream"]}
lazy_static = "1.4.0"
base64 = "0.13.0"
tokio = { version = "1.19.2", features = ["full"] }
async-trait = "0.1.66"
yup-oauth2 = "8.3.2"
futures = "0.3"